// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<EditConsoleURLDialog /> renders correctly 1`] = `
<Modal
  data-test-id="edit-console-url-dialog"
  isPrimaryDisabled={true}
  onClose={[Function]}
  onPrimaryClick={[Function]}
  onSecondaryClick={[Function]}
  primaryText="Save"
  secondaryText="Cancel"
  title="Edit console URL"
>
  <Form
    onSubmit={[Function]}
  >
    <FormGroup
      fieldId="edit-console-url-input"
      label="Web console URL"
      validated="default"
    >
      <TextInput
        aria-label="Web console URL"
        id="edit-console-url-input"
        onChange={[Function]}
        placeholder="https://console-openshift-console.apps.mycluster.example.com/"
        type="text"
        validated="default"
        value="http://www.example.com"
      />
    </FormGroup>
  </Form>
</Modal>
`;

exports[`<EditConsoleURLDialog /> renders correctly when an erorr occurs 1`] = `
<Modal
  data-test-id="edit-console-url-dialog"
  isPrimaryDisabled={true}
  onClose={[Function]}
  onPrimaryClick={[Function]}
  onSecondaryClick={[Function]}
  primaryText="Save"
  secondaryText="Cancel"
  title="Edit console URL"
>
  <ErrorBox
    message="Error changing console URL"
    response={
      Object {
        "error": true,
        "errorMessage": "this is an error",
      }
    }
  />
  <Form
    onSubmit={[Function]}
  >
    <FormGroup
      fieldId="edit-console-url-input"
      label="Web console URL"
      validated="default"
    >
      <TextInput
        aria-label="Web console URL"
        id="edit-console-url-input"
        onChange={[Function]}
        placeholder="https://console-openshift-console.apps.mycluster.example.com/"
        type="text"
        validated="default"
        value="http://www.example.com"
      />
    </FormGroup>
  </Form>
</Modal>
`;
